--- a/style.css
+++ b/style.css
@@ -22,4 +22,30 @@ body{
 
 .container{
   height: 100vh;
+  display: grid;
+  grid-template-columns: 5;
+}
+
+.container_titulo{
+  font-size: 28px;
+}
+
+.container__botao{
+  background-color: var(--botao-azul);
+  color: var(--branco-principal);
+  text-decoration: none;
+  display: block;
+  padding: 1em;
+  border-radius: 5px;
+}
+
+.botao_secundario{
+  background-color: transparent;
+  border: 2px solid var(--branco-principal);
+  
+}
+
+.container_aviso{
+  font-size: 12px;
+  color: var(--cinza-secundario);
 }
