--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-  :root{
+  :root {
     --branco-principal: #FFFFFF;
     --cinza-secundario: #C0C0C0;
     --botao-azul: #167BF7;
@@ -6,63 +6,85 @@
     --fonte-principal: 'Inter';
   }
 
-body{
-  background-color: var(--cor-de-fundo);
-  color: var(--branco-principal);
-  font-family: var(--fonte-principal);
-  font-size: 16px;
-  font-weight: 400;
-}
+  body {
+    background-color: var(--cor-de-fundo);
+    color: var(--branco-principal);
+    font-family: var(--fonte-principal);
+    font-size: 16px;
+    font-weight: 400;
+  }
 
-* {
-  margin: 0;
-  padding: 0;
-}
+  * {
+    margin: 0;
+    padding: 0;
+  }
 
-.principal{
-  background-image: url("img/Background.png");
-  background-repeat: no-repeat;
-  background-size: contain;
-  align-items: center;
-  text-align: center;
-}
+  .principal {
+    background-image: url("img/Background.png");
+    background-repeat: no-repeat;
+    background-size: contain;
+    align-items: center;
+    text-align: center;
+  }
 
-.container{
-  height: 100vh;
-  display: grid;
-  grid-template-columns: 50% 50%;
-}
+  .container {
+    height: 100vh;
+    display: grid;
+    grid-template-columns: 50% 50%;
+  }
 
-.conatainer__caixa{
-  margin: 0 6em;
-}
+  .conatainer__caixa {
+    margin: 0 6em;
+  }
 
-.container__titulo{
-  font-size: 28px;
-  font-weight: 700;
-}
+  .container__titulo {
+    font-size: 28px;
+    font-weight: 700;
+  }
 
-.container__imagem{
-  margin: 1em 0 2em 0;
-}
+  .container__imagem {
+    margin: 1em 0 2em 0;
+  }
 
-.container__botao{
-  background-color: var(--botao-azul);
-  color: var(--branco-principal);
-  text-decoration: none;
-  display: block;
-  padding: 1em;
-  border-radius: 5px;
-  margin-bottom: 1em;
-}
+  .container__botao {
+    background-color: var(--botao-azul);
+    color: var(--branco-principal);
+    text-decoration: none;
+    display: block;
+    padding: 1em;
+    border-radius: 5px;
+    margin-bottom: 1em;
+  }
 
-.botao_secundario{
-  background-color: transparent;
-  border: 2px solid var(--branco-principal);
-  
-}
+  .botao_secundario {
+    background-color: transparent;
+    border: 2px solid var(--branco-principal);
 
-.container__aviso{
-  font-size: 12px;
-  color: var(--cinza-secundario);
-}
+  }
+
+  .container__aviso {
+    font-size: 12px;
+    color: var(--cinza-secundario);
+  }
+
+  /*Aqui começa a segunda sessão */
+
+  .secundario__imagem {
+    width: 60%;
+  }
+
+  .secundario {
+    align-items: center;
+    margin: 0 10em;
+  }
+
+  .descricao__titulo {
+    font-size: 48px;
+    font-weight: 700;
+    color: var(--branco-principal);
+    margin: 0.2em;
+  }
+
+  .descricao__texto {
+    color: var(--cinza-secundario);
+  }
